--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,22 +20,22 @@ jobs:
             goos: windows
             goarch: amd64
             output: MediaGallery.exe
-          - os: windows-latest
-            goos: windows
-            goarch: arm64
-            output: MediaGallery-arm64.exe
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            output: MediaGallery-linux
-          - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            output: MediaGallery-mac-intel
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-            output: MediaGallery-mac-m1
+      #    - os: windows-latest
+       #     goos: windows
+        #    goarch: arm64
+         #   output: MediaGallery-arm64.exe
+          #- os: ubuntu-latest
+          #  goos: linux
+         #   goarch: amd64
+      #      output: MediaGallery-linux
+      #    - os: macos-latest
+      #      goos: darwin
+      #      goarch: amd64
+      #      output: MediaGallery-mac-intel
+      #    - os: macos-latest
+      #      goos: darwin
+       #     goarch: arm64
+       #     output: MediaGallery-mac-m1
 
     steps:
       - name: Checkout code
