--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -155,41 +155,10 @@ jobs:
           path: dist/*
           retention-days: 30
 
-test:
-  name: Test Build
-  runs-on: windows-latest
-  needs: build
-  strategy:
-    matrix:
-      artifact: [MediaGallery.exe, MediaGallery-arm64.exe]
-  
-  steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: ${{ matrix.artifact }}
-
-    - name: Create test media files
-      run: |
-        mkdir test-media
-        cd test-media
-        
-        # Create dummy files with proper extensions
-        fsutil file createnew image1.jpg 1024
-        fsutil file createnew image2.png 1024
-        
-        mkdir subfolder
-        fsutil file createnew subfolder/image3.jpg 1024
-
-    - name: Test executable
-      run: |
-        cd test-media
-        # Test with timeout
-        timeout /t 5 ..\${{ matrix.artifact }} || echo "Test completed (expected exit)"
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build]
     if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
