--- a/launcher/resource.rc
+++ b/launcher/resource.rc
@@ -4,12 +4,12 @@
 101 ICON "gallery_icon.ico"
 
 // Embed the server binary
-1 RCDATA "../server/server.bin"
+1 RCDATA "../server/server.exe"
 
 // Version info
 1 VERSIONINFO
- FILEVERSION     2,0,0,0
- PRODUCTVERSION  2,0,0,0
+ FILEVERSION     2,1,0,0
+ PRODUCTVERSION  2,1,0,0
  FILEFLAGSMASK   0x3fL
  FILEFLAGS       0x0L
  FILEOS          VOS_NT_WINDOWS32
@@ -22,12 +22,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Media Browser"
             VALUE "FileDescription", "Local Media Browser Launcher"
-            VALUE "FileVersion", "2.0.0.0"
+            VALUE "FileVersion", "2.1.0.0"
             VALUE "InternalName", "MediaBrowser"
             VALUE "LegalCopyright", "Open Source MIT License"
-            VALUE "OriginalFilename", "MediaBrowser.bin"
+            VALUE "OriginalFilename", "MediaBrowser.exe"
             VALUE "ProductName", "Media Browser Launcher"
-            VALUE "ProductVersion", "2.0.0.0"
+            VALUE "ProductVersion", "2.1.0.0"
         END
     END
     BLOCK "VarFileInfo"
